# test_elvis

./: .gitattributes  README.md  alembic.ini  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 54e5ec338bf6_initial_migration.py
app/: Dockerfile  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 395a57227286_lang_codes.py  79daad31ed2f_initial_migration.py
app/src/: config.py  crud.py  database.py  logger.py  main.py  models.py  schemas.py
app/src/routers/: rewards.py  users.py
elvis_compose/: .env.example  docker-compose.yml
infra/: docker-compose.yml  nginx.conf
src/: crud.py  database.py  main.py  models.py  schemas.py
