[tool.poetry]
name = "test-elvis"
version = "0.1.0"
description = "Тестовое задание для АО НПЦ Элвис."
authors = ["SivikGosh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
mtranslate = "^1.8"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
